<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"

    >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_bloggers"
            android:icon="@drawable/ic_people_black_24dp"
            android:title="@string/menu_bloggers" />
        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/ic_library_books_black_24dp"
            android:title="@string/menu_categories" />
    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_login"
                android:icon="@drawable/ic_exit_to_app_black_24dp"
                android:title="@string/menu_login"
                android:visible="true"/>

            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_exit_to_app_black_24dp"
                android:title="@string/menu_logout"
                android:visible="false"/>
            <item
                android:id="@+id/nav_register"
                android:icon="@drawable/ic_person_add_black_24dp"
                android:title="@string/menu_register" />

           

        </menu>
    </item>

</menu>
